<resources>
    <string name="main_activity_filter_name">导入任务</string>
    <string name="instant_activity_filter_name">执行或触发任务</string>
    <string name="common_package">top.bogey.common</string>
    <string name="common_name">通用</string>
    <string name="dialog_title">提示</string>
    <string name="enter">确定</string>
    <string name="cancel">取消</string>
    <string name="clear">清除</string>
    <string name="save">保存</string>
    <string name="close">关闭</string>
    <string name="copy">复制</string>
    <string name="copy_and_join">复制并加群</string>
    <string name="copy_tips">已复制</string>
    <string name="copy_ttp_url">任务连接</string>
    <string name="hours">%d小时</string>
    <string name="minutes">%d分钟</string>
    <string name="year">%d年</string>
    <string name="month">%d月</string>
    <string name="day">%d日</string>
    <string name="hour">%d时</string>
    <string name="minute">%d分</string>
    <string name="second">%d秒</string>
    <string name="millisecond">%d毫秒</string>
    <string name="tag_empty">未分类</string>
    <string name="tag_shortcut">快捷方式</string>
    <string name="tag_add">添加新的标签</string>
    <string name="tag_remove">确认要删除这个标签吗？</string>
    <string name="task">任务</string>
    <string name="tool">工具</string>
    <string name="blueprint">蓝图</string>
    <string name="setting">设置</string>
    <string name="select_all">全选</string>
    <string name="remove_task">删除</string>
    <string name="remove_tips">删除之后无法撤回，确定要删除吗？</string>
    <string name="export_task">导出</string>
    <string name="export_task_tips">导出并发送</string>
    <string name="import_task">导入</string>
    <string name="file_name">文件名称</string>
    <string name="move_task">标签</string>
    <string name="title">标题</string>
    <string name="des">描述</string>
    <string name="creator">创建者</string>
    <string name="tag">标签</string>
    <string name="copy_title">%s_复制</string>
    <string name="force_delete">强制删除</string>
    <string name="task_add">添加任务</string>
    <string name="task_update">修改任务</string>
    <string name="task_search">搜索任务</string>
    <string name="task_search_hint">搜索任务名称、拼音</string>
    <string name="task_search_history">搜索历史</string>
    <string name="task_search_result">搜索结果</string>
    <string name="task_tag_add">添加标签</string>
    <string name="task_delete_tips">有%d个任务调用了此任务，分别是：</string>
    <string name="tasks_delete_tips">有%d个任务调用了这些任务，分别是：</string>
    <string name="task_import">导入任务</string>
    <string name="task_import_tag">导入分类</string>
    <string name="task_import_copy">导入副本</string>
    <string name="task_import_desc">从你选择的文件中选择需要导入的任务配置和通用自定义卡片</string>
    <string name="task_import_error_tips">将覆盖本地任务“%s”</string>
    <string name="task_import_copy_tips">本地已存在“%s”，将导入为副本</string>
    <string name="task_export">导出任务</string>
    <string name="task_export_desc">选择需要导出的任务配置和通用自定义卡片到你选择的文件夹中</string>
    <string name="task_export_task_reference">引用任务：</string>
    <string name="task_export_var_reference">引用变量：</string>
    <string name="task_exchange_to_custom">转换为任务内自定义任务</string>
    <string name="variable_add">添加变量</string>
    <string name="variable_update">修改变量</string>
    <string name="variable_need_save">需要保存变量值</string>
    <string name="variable_delete_tips">有%d个任务引用了此变量，分别是：</string>
    <string name="task_running_log">任务日志</string>
    <string name="task_running_log_switch">切换日志开关</string>
    <string name="task_running_log_clear">清除日志</string>
    <string name="task_running_detail_log">记录日志细节</string>
    <string name="task_running_log_load_error">日志加载失败</string>
    <string name="task_capture">任务截图</string>
    <string name="select_action_group_global">全局</string>
    <string name="select_action_group_private">自有</string>
    <string name="select_app_search">搜索应用</string>
    <string name="select_app_search_third">搜索%d个第三方应用</string>
    <string name="select_app_search_all">搜索%d个所有应用</string>
    <string name="select_app_activity">选择活动</string>
    <string name="select_app_search_activity">搜索活动</string>
    <string name="select_app_activity_launcher">启动项</string>
    <string name="select_app_activity_exported">已导出</string>
    <string name="select_app_activity_not_exported">未导出</string>
    <string name="select_icon_search">搜索图标</string>
    <string name="select_icon_preset">预设</string>
    <string name="select_icon_app">应用</string>
    <string name="select_icon_system_app">系统应用</string>
    <string name="select_icon_tips">请选择一个图标</string>
    <string name="multi_select">多选</string>
    <string name="multi_select_search">搜索选项</string>
    <string name="search_card_count">%d/%d</string>
    <string name="card_check_error_tips">存在%d个问题卡片</string>
    <string name="running_error_tips">检测到应用出现崩溃，是否加入QQ群去上报错误？</string>
    <string name="bind_service_failed_tips">绑定服务失败</string>
    <string name="check_pin_linkable_error">针脚类型不匹配</string>
    <string name="check_need_super_user_error">需要超级用户权限</string>
    <string name="check_need_ocr_module_error">需要Ocr模型</string>
    <string name="check_not_exist_variable_error">引用的变量不存在</string>
    <string name="check_action_deprecated_error">动作已过期，请用其他动作替换</string>
    <string name="check_android_version_9_error">需要Android 9.0及以上版本</string>
    <string name="check_need_fine_location_permission_error">需要精确位置权限</string>
    <string name="check_need_exact_alarm_permission_error">需要精确定时权限</string>
    <string name="check_need_bluetooth_permission_error">需要蓝牙监听权限</string>
    <string name="task_recorder_not_recording_tips">当前未开始录制</string>
    <string name="check_need_capture_warning">需要开启录屏动作</string>
    <string name="check_may_need_use_pos_pin_warning">可能需要使用位置针脚做偏移</string>
    <string name="check_need_notification_warning">需要开启通知权限</string>
    <string name="check_not_global_task_warning">非全局任务</string>
    <string name="action_add_pin">添加针脚</string>
    <string name="action_add_execute">添加执行</string>
    <string name="action_add_des">修改备注</string>
    <string name="pin_execute">执行</string>
    <string name="pin_add_pin">添加针脚</string>
    <string name="pin_add_execute">添加执行</string>
    <string name="pin_object">对象</string>
    <string name="pin_list">列表</string>
    <string name="pin_list_app">应用列表</string>
    <string name="pin_multi_select">多选</string>
    <string name="pin_map">字典</string>
    <string name="pin_string">文本</string>
    <string name="pin_string_url">链接</string>
    <string name="pin_string_shortcut">快捷方式</string>
    <string name="pin_string_ringtone">铃声</string>
    <string name="pin_string_file_content">文件内容</string>
    <string name="pin_string_single_line">单行文本</string>
    <string name="pin_string_node_path">控件身份</string>
    <string name="pin_string_node_path_text">控件路径</string>
    <string name="pin_string_log">通配文本</string>
    <string name="pin_string_task">任务</string>
    <string name="pin_string_select">单选</string>
    <string name="pin_string_select_hint">选项(逗号分隔)</string>
    <string name="pin_string_full_screen_edit">全屏编辑</string>
    <string name="pin_number_integer">整数</string>
    <string name="pin_number_float">小数</string>
    <string name="pin_number_long">长整数</string>
    <string name="pin_number_double">数值</string>
    <string name="pin_number_date">日期</string>
    <string name="pin_number_time">时间</string>
    <string name="pin_number_periodic">间隔</string>
    <string name="pin_boolean_condition">条件</string>
    <string name="pin_boolean_result">结果</string>
    <string name="pin_value_area">数值区域</string>
    <string name="pin_value_area_min">最小</string>
    <string name="pin_value_area_max">最大</string>
    <string name="pin_point">位置</string>
    <string name="pin_area">区域</string>
    <string name="pin_touch">手势</string>
    <string name="pin_node">控件</string>
    <string name="pin_image">图片</string>
    <string name="pin_image_full">图片(默认全屏)</string>
    <string name="pin_color">颜色</string>
    <string name="pin_app">应用或界面</string>
    <string name="picker_test_title">测试</string>
    <string name="picker_area_title">选择区域</string>
    <string name="picker_area_offset">置信度：%d</string>
    <string name="picker_color_title">选择颜色</string>
    <string name="picker_color_offset">相似度：%d</string>
    <string name="picker_image_title">选择图片</string>
    <string name="picker_image_offset">相似度：%d</string>
    <string name="picker_point_title">选择位置</string>
    <string name="picker_touch_title">采集手势</string>
    <string name="picker_node_title">选择控件</string>
    <string name="picker_node_id">控件ID:</string>
    <string name="picker_node_text">控件文本:</string>
    <string name="picker_node_path">控件路径:</string>
    <string name="picker_node_search_hint">长按列表项选中</string>
    <string name="picker_node_type_1">仅可用</string>
    <string name="picker_node_type_2">顶部优先</string>
    <string name="picker_node_type_3">深度优先</string>
    <string name="picker_area_pos_change">位置微调区</string>
    <string name="picker_area_size_change">大小微调区</string>
    <string name="point_x">X</string>
    <string name="point_y">Y</string>
    <string name="area_left">左</string>
    <string name="area_top">上</string>
    <string name="area_right">右</string>
    <string name="area_bottom">下</string>
    <string name="color_red">R</string>
    <string name="color_green">G</string>
    <string name="color_blue">B</string>
    <string name="device_not_support_lock">当前设备不支持调用锁屏功能</string>
    <string name="device_not_support_snap">当前设备不支持调用系统截图</string>
    <string name="device_not_support_shortcut">当前设备不支持创建快捷方式</string>
    <string name="capture_service">屏幕录制</string>
    <string name="package_activity">应用信息</string>
    <string name="node_picker">控件信息</string>
    <string name="color_picker">颜色信息</string>
    <string name="running_log">任务日志</string>
    <string name="model_manager">模型管理</string>
    <string name="model_manager_importing">正在导入模型…</string>
    <string name="model_manager_import_success">模型导入成功</string>
    <string name="model_manager_import_failed">模型导入失败</string>
    <string name="model_manager_model_labels">模型标签</string>
    <string name="setting_need_notification_desc">前台服务和录屏服务需要发送通知，请授予应用发送通知的权限</string>
    <string name="setting_auto_give_capture_permission">设置自动开启录屏</string>
    <string name="setting_auto_give_capture_permission_des">授予 自动开启录屏 权限能够在需要使用录屏时自动授权，这样可以更方便快捷的执行各种自动化无人值守任务</string>
    <string name="setting_copy_shell">复制指令</string>
    <string name="setting_execute_shell">执行指令</string>
    <string name="setting_help_doc">帮助文档</string>
    <string name="setting_help_doc_url">https://mr-bogey.github.io/TouchTool/</string>
    <string name="setting_help_video">视频教程</string>
    <string name="setting_help_video_url">https://space.bilibili.com/114428414/lists/8647316</string>
    <string name="setting_qq_group_url">https://pd.qq.com/s/379om0lhx?b=9</string>
    <string name="app_setting">应用设置</string>
    <string name="app_setting_enable">功能启用</string>
    <string name="app_setting_enable_desc">在设置中启用功能后才能使用软件提供的各种能力</string>
    <string name="app_setting_enable_tips">需要开启无障碍服务才能启用功能。请依次点击“已下载的应用”->“%s”，然后开启服务。</string>
    <string name="app_setting_enable_error">无障碍服务未启用</string>
    <string name="app_setting_enabled">功能已启用</string>
    <string name="app_setting_disable">功能已关闭</string>
    <string name="app_setting_reload">重启无障碍服务</string>
    <string name="app_setting_reload_desc">关闭或清理当前无障碍服务，并重新启动无障碍服务</string>
    <string name="app_setting_reload_tips">正在重启无障碍服务</string>
    <string name="app_setting_reload_error">重启无障碍失败</string>
    <string name="app_setting_reload_success">重启无障碍成功</string>
    <string name="app_setting_reload_button_text">重启</string>
    <string name="app_setting_reload_button_running">重启中</string>
    <string name="app_setting_auto_reload">自动重启无障碍</string>
    <string name="app_setting_auto_reload_desc">授予 写入安全设置 权限能够使应用自动重启无障碍服务</string>
    <string name="app_setting_auto_reload_title">写入安全设置权限</string>
    <string name="app_setting_auto_reload_message">请授予写入安全设置权限</string>
    <string name="app_setting_hide_back">隐藏后台</string>
</resources>