<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="?attr/defaultPadding"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchBox"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_search"
        app:endIconMode="clear_text"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
        app:startIconDrawable="@drawable/icon_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/importTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_import_tag" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/importCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/defaultPadding"
            android:text="@string/task_import_copy" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/selectAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/select_all" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectionBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/dialog_task_manager_item" />

</LinearLayout>