<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="?attr/iconButtonSize"
    android:gravity="center_vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="?attr/iconButtonSize"
        android:layout_gravity="center_horizontal"
        android:clipChildren="false"
        android:hint="@string/area_left"
        android:translationY="-2dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/leftEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="numberSigned"
            android:paddingHorizontal="?attr/defaultPadding"
            android:paddingVertical="0dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="?attr/iconButtonSize"
        android:layout_gravity="center_horizontal"
        android:clipChildren="false"
        android:hint="@string/area_top"
        android:translationY="-2dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/topEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="numberSigned"
            android:paddingHorizontal="?attr/defaultPadding"
            android:paddingVertical="0dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="?attr/iconButtonSize"
        android:layout_gravity="center_horizontal"
        android:clipChildren="false"
        android:hint="@string/area_right"
        android:translationY="-2dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rightEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="numberSigned"
            android:paddingHorizontal="?attr/defaultPadding"
            android:paddingVertical="0dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="?attr/iconButtonSize"
        android:layout_gravity="center_horizontal"
        android:clipChildren="false"
        android:hint="@string/area_bottom"
        android:translationY="-2dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bottomEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="numberSigned"
            android:paddingHorizontal="?attr/defaultPadding"
            android:paddingVertical="0dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pickButton"
        style="?attr/iconButtonOutlined"
        app:icon="@drawable/icon_area" />

</LinearLayout>
