<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="?attr/defaultPadding">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/defaultPadding"
        android:hint="@string/title"
        app:endIconMode="clear_text"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/defaultPadding"
        android:hint="@string/des"
        app:endIconMode="clear_text"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/defaultPadding">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tag"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addTagBtn"
            style="?attr/iconButtonFilled"
            android:layout_marginStart="?attr/defaultPadding"
            app:icon="@drawable/icon_add" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recordButton"
            style="?attr/iconButtonFilled"
            app:icon="@drawable/icon_video_call" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tagBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
